Fixed color contrast for to do list item's editing template and fixed case where updated task is an empty string

--- a/src/index.css
+++ b/src/index.css
@@ -289,7 +289,8 @@ svg path:hover {
   width: 25%;
   background-color: var(--color-3);
   opacity: 2;
-  color: var(--color-2);
+  font-family: 'Gotham Medium', sans-serif;
+  color: var(--color-1);
 }
 
 
